--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1053,7 +1053,7 @@ textarea {
         justify-content: center;
         align-items: center;
         margin-left: 1rem;
-        width: 220px;
+        width: 75%;
         border-radius: 0.5rem;
         gap: 0.2rem;
         margin-top: 0.4rem;
